[package]
name = "breeze"
version = "0.1.0"
edition = "2021"
authors = ["CupertinoWasTaken"]
description = "Toy HTTP/1.1 Server Library"
repository = "https://github.com/CupertinoWasTaken/breeze-rs"
license = "LGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
color-eyre = { version = "0.6", default-features = false }

[profile.dev.package.backtrace]
opt-level = 3
